src/objects/WorkflowRuleCriteria__c.object
<CustomObject>
    <description>Object to hold the rule criteria for a rule</description>
    <fields>
        <fullName>Child_Relationship_Name__c</fullName>
        <label>Child Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Object__c</fullName>
        <label>Criteria Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrossFormula__c</fullName>
        <label>Cross Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluate_ChildCriteria_Using__c</fullName>
        <label>Evaluate Child Criteria Using</label>
        <picklist>
            <picklistValues>
                <fullName>AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluate_Criteria_Result_To__c</fullName>
        <label>Evaluate Criteria Result To</label>
        <picklist>
            <picklistValues>
                <fullName>True - If no child record found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False - If no child record found</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <defaultValue>&quot;&lt;auto-detect&gt;&quot;</defaultValue>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Relation__c</fullName>
        <formula>IF(CONTAINS(Field_API_Name__c, &apos;[].&apos;), &apos;Related List&apos;, IF(CONTAINS(Field_API_Name__c, &apos;.&apos;), &apos;Lookup&apos;, NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Relation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GlobalVariable__c</fullName>
        <label>Global Variable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Value__c</fullName>
        <label>Maximum Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Value__c</fullName>
        <label>Minimum Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Equal To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Contain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starts With</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ends With</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Or Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Or Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Includes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excludes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Field__c</fullName>
        <label>Parent Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Name__c</fullName>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleObjectType__c</fullName>
        <formula>Workflow_Rule__r.Object_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Rule__c</fullName>
        <label>Workflow Rule</label>
        <referenceTo>WorkflowRule__c</referenceTo>
        <relationshipName>Workflow_Rule_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workflow Rule Criteria</label>
    <nameField>
        <displayFormat>Criteria #{0000}</displayFormat>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Rule Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cross_Formula_Required</fullName>
        <active>true</active>
        <description>CrossFormula is required if  field selected is cross formula</description>
        <errorConditionFormula>AND( CONTAINS ( Field_API_Name__c , &apos;CrossFormula&apos;), ISBLANK( CrossFormula__c ))</errorConditionFormula>
        <errorMessage>Cross formula needs to be defined.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Matching_Value_Is_Required</fullName>
        <active>false</active>
        <description>Matching Value should be a required field for all operators except the opperator &quot;Between&quot; E</description>
        <errorConditionFormula>AND(Not(ISBLANK(TEXT(Operator__c))),Not(ISPICKVAL(Operator__c , &apos;Between&apos;)),Not(ISPICKVAL(Operator__c , &apos;Is Changed&apos;)),Not(ISPICKVAL(Operator__c , &apos;Is Null&apos;)),Not(ISPICKVAL(Operator__c , &apos;Is Not Null&apos;)), ISBLANK(Value__c))</errorConditionFormula>
        <errorMessage>Please enter a matching value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Value_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Operator__c , &apos;Between&apos;), ISBLANK(Maximum_Value__c))</errorConditionFormula>
        <errorDisplayField>Maximum_Value__c</errorDisplayField>
        <errorMessage>When the Operator is Between, the Maximum Value field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minimum_Value_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Operator__c , &apos;Between&apos;), ISBLANK(Minimum_Value__c))</errorConditionFormula>
        <errorDisplayField>Minimum_Value__c</errorDisplayField>
        <errorMessage>When the Operator is Between, the Minimum Value field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Operator_Is_Required</fullName>
        <active>true</active>
        <description>Operator is required field</description>
        <errorConditionFormula>ISBLANK( TEXT(Operator__c) )</errorConditionFormula>
        <errorMessage>Operator value is required</errorMessage>
    </validationRules>
</CustomObject>